add hover actice for link and btn

--- a/practice-two/src/styles/bases/base.scss
+++ b/practice-two/src/styles/bases/base.scss
@@ -3,6 +3,6 @@
 }
 
 html {
-  font-family: Integral CF, Satoshi;
+  font-family: $font-primary, $font-secondary;
   font-size: $basic-font-size;
 }
