--- a/practice-two/src/styles/bases/variable.scss
+++ b/practice-two/src/styles/bases/variable.scss
@@ -14,3 +14,7 @@ $bg-product: rgba(255, 51, 51, 0.1);
 //size
 $basic-font-size : 20px;
 $desktop : 1440px;
+
+// font-family
+$font-primary: Integral CF;
+$font-secondary: Satoshi;
