--- a/practice-two/src/styles/layouts/footer.scss
+++ b/practice-two/src/styles/layouts/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   background-color: $bg-secondary;
-  font-family: Satoshi;
+  font-family: $font-secondary;
   min-width: 390;
 
   &__title {
