--- a/practice-two/src/styles/modules/btn.scss
+++ b/practice-two/src/styles/modules/btn.scss
@@ -1,12 +1,17 @@
 .btn {
   border-radius: toRem(62px);
-  font-family: Satoshi;
+  font-family: $font-secondary;
   border: none;
   font-weight: 500;
   font-size: toRem(14px);
 
   &:hover {
-    background-color: $btn-primary;
+    background-color: $primary-color;
+    color: $secondary-color;
+  }
+
+  &:active {
+    box-shadow: 2px 2px 5px $primary-color
   }
 
   &--primary {
@@ -17,6 +22,18 @@
   &--secondary {
     color: $text-color;
     color: $bg-color;
+  }
+
+  &--light {
+
+    &:hover {
+      background-color: $secondary-color;
+      color: $primary-color;
+    }
+
+    &:active {
+      box-shadow: 2px 2px 5px $btn-primary;
+    }
   }
 }
 
