--- a/practice-two/src/styles/modules/link.scss
+++ b/practice-two/src/styles/modules/link.scss
@@ -1,5 +1,13 @@
 .link {
   text-decoration: none;
   color: $primary-color;
+
+  &:hover {
+    text-decoration: underline;
+  }
+
+  &:active {
+    color: $bg-color;
+  }
 }
 
