--- a/practice-two/src/styles/modules/product.scss
+++ b/practice-two/src/styles/modules/product.scss
@@ -10,7 +10,7 @@
   }
 
   &__name {
-    font-family: Satoshi;
+    font-family: $font-secondary;
     margin-bottom: toRem(4px);
     font-weight: 700;
     font-size: toRem(16px);
@@ -23,7 +23,7 @@
   }
 
   &__feedback-score {
-    font-family: Satoshi;
+    font-family: $font-secondary;
     font-size: toRem(12px);
     font-weight: 400;
   }
@@ -61,6 +61,7 @@
 
     &__price {
       gap:toRem(10px);
+      font-size: 1.2rem;
     }
   }
 }
