rename variable color

--- a/practice-two/src/styles/layouts/banner.scss
+++ b/practice-two/src/styles/layouts/banner.scss
@@ -1,5 +1,5 @@
 .banner {
-  background-color: $bg-secondary;
+  background-color: $bg-color;
   font-family: $font-secondary;
   min-width: toRem(390px);
 
