--- a/practice-two/src/styles/layouts/brand.scss
+++ b/practice-two/src/styles/layouts/brand.scss
@@ -1,5 +1,5 @@
 .brand {
-  background-color: $bg-color;
+  background-color: $color-primary;
   padding: toRem(39px) toRem(16px);
 
   &__wrapper {
