--- a/practice-two/src/styles/modules/desc.scss
+++ b/practice-two/src/styles/modules/desc.scss
@@ -1,6 +1,6 @@
 .desc {
   font-family: $font-secondary;
-  color: $primary-color;
+  color: $color-text-primary;
   font-weight: 400;
   display: block;
   line-height: toRem(20px);
