--- a/practice-two/src/styles/modules/link.scss
+++ b/practice-two/src/styles/modules/link.scss
@@ -1,13 +1,13 @@
 .link {
   text-decoration: none;
-  color: $primary-color;
+  color:  $color-text-primary;
 
   &:hover {
     text-decoration: underline;
   }
 
   &:active {
-    color: $bg-color;
+    color: $color-primary;
   }
 }
 
