--- a/practice-two/src/styles/modules/navbar.scss
+++ b/practice-two/src/styles/modules/navbar.scss
@@ -18,7 +18,7 @@
 
   &__nav {
     border: none;
-    background-color: $text-color;
+    background-color: $color-text-secondary;
   }
 }
 
@@ -60,7 +60,7 @@
       background-position: toRem(12px) toRem(12px);
       padding: toRem(2px) toRem(52px);
       border: 1px solid white;
-      background-color: $secondary-color;
+      background-color: $color-secondary;
       outline: none;
     }
   }
