--- a/practice-two/src/styles/layouts/arrival.scss
+++ b/practice-two/src/styles/layouts/arrival.scss
@@ -27,7 +27,7 @@
 
   &__box-btn {
     padding-bottom: toRem(40px);
-    border-bottom: 1px solid $line-color;
+    border-bottom: 1px solid $color-line;
     width: math.div(358, 374) * 100%;
   }
 
