--- a/practice-two/src/styles/layouts/comment.scss
+++ b/practice-two/src/styles/layouts/comment.scss
@@ -16,16 +16,16 @@
   }
 
   &__btn {
-    border: 1px solid $text-color;
-    background-color: $text-color;
+    border: 1px solid $color-text-secondary;
+    background-color: $color-text-secondary;
 
     &:hover {
-      background-color: $primary-color;
-      color: $secondary-color;
+      background-color: $color-text-primary;
+      color: $color-secondary;
     }
 
     &:active {
-      box-shadow: 2px 2px 5px $primary-color
+      box-shadow: 2px 2px 5px $color-text-primary;
     }
   }
 
@@ -43,7 +43,7 @@
 
 .comment-item {
   padding: toRem(24px);
-  border: 1px solid $line-color;
+  border: 1px solid $color-line;
   border-radius: toRem(20px);
   min-width: toRem(358px);
   align-items: center;
@@ -64,7 +64,7 @@
   &__desc {
     font-size: (14px);
     font-weight: 400;
-    color: $primary-color;
+    color: $color-text-primary;
   }
 }
 
