--- a/practice-two/src/styles/modules/variable.scss
+++ b/practice-two/src/styles/modules/variable.scss
@@ -1,15 +1,17 @@
 // variable color
 
-$bg-color: black;
-$bg-secondary: #f2f0f1;
-$secondary-color: #f0f0f0;
-$text-color: #fff;
-$decs-color: rgba(0, 0, 0, 0.40);
-$product-color: #ff3333;
-$primary-color: rgba(0, 0, 0, 0.60);
-$btn-primary: #e7e7e7;
-$line-color: rgba(0, 0, 0, 0.10);
+// $primary-color: rgba(0, 0, 0, 0.60);
+$color-primary: black;
+$color-secondary: #f0f0f0;
+$color-text-primary: rgba(0, 0, 0, 0.60);
+$color-text-secondary: #fff;
+$color-btn: #e7e7e7;
+$color-line: rgba(0, 0, 0, 0.10);
 $bg-product: rgba(255, 51, 51, 0.1);
+$bg-color: #f2f0f1;
+$product-color: #ff3333;
+$product-color-secondary: rgba(0, 0, 0, 0.4);
+
 
 //size
 $basic-font-size : 20px;
