--- a/practice-two/src/styles/layouts/browse.scss
+++ b/practice-two/src/styles/layouts/browse.scss
@@ -1,5 +1,5 @@
 .browse {
-  background-color: $bg-color;
+  background-color: $bg-primary;
   text-align: center;
   border-radius: 1rem;
   margin: 0 auto;
