--- a/practice-two/src/styles/modules/variable.scss
+++ b/practice-two/src/styles/modules/variable.scss
@@ -1,6 +1,5 @@
 // variable color
 
-// $primary-color: rgba(0, 0, 0, 0.60);
 $color-primary: black;
 $color-secondary: #f0f0f0;
 $color-text-primary: rgba(0, 0, 0, 0.60);
@@ -8,15 +7,6 @@ $color-text-secondary: #fff;
 $color-btn: #e7e7e7;
 $color-line: rgba(0, 0, 0, 0.10);
 $bg-product: rgba(255, 51, 51, 0.1);
-$bg-color: #f2f0f1;
+$bg-primary: #f2f0f1;
 $product-color: #ff3333;
 $product-color-secondary: rgba(0, 0, 0, 0.4);
-
-
-//size
-$basic-font-size : 20px;
-$desktop : 1440px;
-
-// font-family
-$font-primary: Integral CF;
-$font-secondary: Satoshi;
