add background for icon

--- a/practice-two/src/styles/layouts/comment.scss
+++ b/practice-two/src/styles/layouts/comment.scss
@@ -18,6 +18,7 @@
   &__btn {
     border: 1px solid $color-text-secondary;
     background-color: $color-text-secondary;
+    padding: 0;
 
     &:hover {
       background-color: $color-text-primary;
