--- a/practice-two/src/styles/layouts/banner.scss
+++ b/practice-two/src/styles/layouts/banner.scss
@@ -15,7 +15,7 @@
 
   &__content {
     @extend %flexbox-items-wrapped;
-    padding: toRem(40px) math.div(16, 390) * 100% 0;
+    padding: toRem(40px) math.div(16, 390)* 100%;
     gap: toRem(20px);
     margin-left: auto;
     width: 100%;
@@ -57,7 +57,7 @@
     background-image: url('../assets/images/banners/rectangle.png');
     background-repeat: no-repeat;
     background-position: center;
-    background-size: contain;
+    background-size:  contain;
     flex-wrap: nowrap;
 
     &__wrapper {
@@ -103,7 +103,6 @@
     &__img-right {
       @include width-height(toRem(104px), toRem(104px));
       margin-top: toRem(86px);
-      margin-right: math.div(137, 1440) * 100%;
     }
   }
 }
