--- a/practice-two/src/styles/layouts/top-selling.scss
+++ b/practice-two/src/styles/layouts/top-selling.scss
@@ -29,15 +29,15 @@
 
   &__btn {
     padding: toRem(13.5px)toRem(153.5px);
-    margin-right: math.div(16, 390) * 100%;
-    width:  math.div(358, 374) * 100%;
+    width: 100%;
     min-height: toRem(46px);
   }
 }
 
 @include desktop {
   .top-selling {
-    margin: 0;
+    max-width: toRem(1240px);
+    margin: 0 auto;
 
     padding: toRem(64px) toRem(0px) toRem(80px) toRem(0px);
 
