--- a/practice-two/src/styles/modules/info.scss
+++ b/practice-two/src/styles/modules/info.scss
@@ -16,7 +16,7 @@
   }
 
   &__box--line {
-    border-left: 1px solid $color-line;
+    border-left: toRem(1px) solid $color-line;
   }
 
   &__box {
@@ -50,7 +50,7 @@
 
     &__box--line {
       width: toRem(220px);
-      border-right: 1px solid $color-line;
+      border-right: toRem(1px) solid $color-line;
     }
   }
 }
