--- a/practice-two/src/styles/modules/navbar.scss
+++ b/practice-two/src/styles/modules/navbar.scss
@@ -59,7 +59,7 @@
       background-repeat: no-repeat;
       background-position: toRem(12px) toRem(12px);
       padding: toRem(2px) toRem(52px);
-      border: 1px solid white;
+      border: toRem(1px) solid white;
       background-color: $color-secondary;
       outline: none;
     }
