--- a/practice-two/src/styles/layouts/index.scss
+++ b/practice-two/src/styles/layouts/index.scss
@@ -6,7 +6,7 @@
 @import 'banner';
 @import 'brand';
 @import 'browse';
-@import 'comment';
+@import 'happy-customer';
 @import 'footer';
-@import 'arrival.scss';
-@import 'top-selling.scss';
+@import 'arrival';
+@import 'top-selling';
