--- a/practice-two/src/styles/layouts/arrival.scss
+++ b/practice-two/src/styles/layouts/arrival.scss
@@ -26,9 +26,9 @@
   }
 
   &__box-btn {
-    padding-bottom: toRem(40px);
     border-bottom: toRem(1px) solid $color-line;
-    width: math.div(358, 374) * 100%;
+    padding-bottom: toRem(40px);
+    margin-right: toRem(16px);
   }
 
   &__btn {
@@ -57,6 +57,7 @@
     &__box-btn {
       width: 100%;
       padding-bottom: toRem(64px);
+      margin-right: 0;
     }
 
     &__btn {
