--- a/practice-two/src/styles/layouts/brand.scss
+++ b/practice-two/src/styles/layouts/brand.scss
@@ -1,6 +1,7 @@
 .brand {
   background-color: $color-primary;
   padding: toRem(39px) toRem(16px);
+  width: 100%;
 
   &__wrapper {
     flex-wrap: wrap;
@@ -8,6 +9,7 @@
     gap: toRem(22px);
     justify-content: center;
     max-width: toRem(480px);
+    margin: 0 auto;
   }
 
   &__wrapper-xxl {
