--- a/practice-two/src/styles/layouts/container.scss
+++ b/practice-two/src/styles/layouts/container.scss
@@ -1,9 +1,10 @@
 .container {
-  margin: 0 math.div(16, 390) * 100%;
+  margin: 0 toRem(16px);
 }
 
 @include desktop {
   .container {
+    margin: 0 auto;
     max-width: toRem(1240px);
   }
 }
