--- a/practice-two/src/styles/modules/index.scss
+++ b/practice-two/src/styles/modules/index.scss
@@ -11,3 +11,7 @@
 @import 'navbar.scss';
 @import 'variable.scss';
 @import 'icon.scss';
+@import 'comment.scss';
+@import 'contact.scss';
+@import 'action.scss';
+@import 'copyright.scss';
