--- a/practice-two/src/styles/layouts/arrival.scss
+++ b/practice-two/src/styles/layouts/arrival.scss
@@ -1,8 +1,7 @@
 .arrival {
   padding-top: toRem(50px);
   text-align: center;
-  margin-left: math.div(16, 390) * 100%;
-
+  margin-left: toRem(16px);
   &__title {
     margin-bottom: toRem(32px);
     font-size: toRem(32px);
