--- a/practice-two/src/styles/modules/comment.scss
+++ b/practice-two/src/styles/modules/comment.scss
@@ -6,7 +6,55 @@
   min-width: 358px;
 
 
+  &__img {
+    @include width-height(toRem(19px), toRem(19px));
+    margin-left: toRem(5.75px);
+  }
+
+  &__desc {
+    font-size: (14px);
+    font-weight: 400;
+    color: $color-text-primary;
+  }
+
+  &__feedback {
+    margin-bottom: toRem(12px);
+  }
+
   &__date {
-    margin-top: 24px;
+    margin-top: toRem(16px);
+    font-size: (14px);
+  }
+
+}
+
+@include desktop {
+  .comment {
+    padding: toRem(28px) toRem(32px);
+
+    &__name {
+      font-size: toRem(20px);
+      margin-bottom: toRem(12px);
+    }
+
+    &__img {
+      @include width-height(toRem(19.5px), toRem(19.5px));
+      margin-left: toRem(6.25px);
+    }
+
+    &__desc {
+      font-size: toRem(16px);
+      font-weight: 400;
+    }
+
+    &__feedback {
+      margin-bottom: toRem(15px);
+    }
+
+
+  &__date {
+    margin-top: toRem(24px);
+    font-size: (16px);
+  }
   }
 }
