--- a/practice-two/src/styles/modules/index.scss
+++ b/practice-two/src/styles/modules/index.scss
@@ -6,11 +6,15 @@
 @import 'info.scss';
 @import 'desc.scss';
 @import 'evaluate.scss';
+@import 'price.scss';
 @import 'product.scss';
 @import 'navbar.scss';
 @import 'variable.scss';
 @import 'icon.scss';
 @import 'comment.scss';
+@import 'contact.scss';
+@import 'action.scss';
+@import 'copyright.scss';
 @import 'image.scss';
 @import 'checked.scss';
 @import 'price';
