--- a/practice-two/src/styles/modules/evaluate.scss
+++ b/practice-two/src/styles/modules/evaluate.scss
@@ -10,6 +10,18 @@
   }
 }
 
+.evaluate-detail {
+  margin-bottom: toRem(4px);
+
+  &__img {
+    @include width-height(toRem(18.67px), toRem(18.67px));
+  }
+
+  &__img--half {
+    @include width-height(toRem(8.88px), toRem(16.89px));
+  }
+}
+
 .evaluate-comment {
   &__img {
     @include width-height(toRem(19.19px));
@@ -25,6 +37,18 @@
 
     &__img--half {
       @include width-height(toRem(9.79px), toRem(16.72px));
+    }
+  }
+
+  .evaluate-detail {
+    margin-bottom: toRem(4px);
+
+    &__img {
+      @include width-height(toRem(24.71px), toRem(24.71px));
+    }
+
+    &__img--half {
+      @include width-height(toRem(11.75px), toRem(22.35px));
     }
   }
 
