--- a/practice-two/src/styles/layouts/header.scss
+++ b/practice-two/src/styles/layouts/header.scss
@@ -2,10 +2,14 @@
   font-family: Satoshi;
   padding: toRem(20px) 0;
   margin: 0 16px;
+  border-bottom: 1px solid $color-line
+
 }
 
 @include desktop {
   .header {
+    margin: 0 auto;
     padding: toRem(24px) 0;
+    max-width: 1240px;
   }
 }
