--- a/practice-two/src/styles/modules/index.scss
+++ b/practice-two/src/styles/modules/index.scss
@@ -1,10 +1,10 @@
 @use 'sass:math';
 
+@import 'desc.scss';
 @import 'btn.scss';
 @import 'title.scss';
 @import 'link.scss';
 @import 'info.scss';
-@import 'desc.scss';
 @import 'evaluate.scss';
 @import 'price.scss';
 @import 'product.scss';
@@ -18,3 +18,4 @@
 @import 'image.scss';
 @import 'checked.scss';
 @import 'price';
+@import 'aside.scss';
