--- a/practice-two/src/styles/modules/variable.scss
+++ b/practice-two/src/styles/modules/variable.scss
@@ -10,3 +10,5 @@ $bg-product: rgba(255, 51, 51, 0.1);
 $bg-primary: #f2f0f1;
 $product-color: #ff3333;
 $product-color-secondary: rgba(0, 0, 0, 0.4);
+$color-sell : rgba(255, 51, 51, 1);
+
